[package]
name = "url"
version = "0.1.0"
authors = ["Timothy Andrew <mail@timothyandrew.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
clap = "2.33.1"
regex = "1.3.9"
htmlescape = "0.3.1"